--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "type": "commonjs",
   "dependencies": {
     "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "mongoose": "^9.1.5",
+    "ms": "^2.1.3",
+    "pretty-ms": "^9.3.0"
   }
 }
