--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "canvacord": "^6.0.4",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "mongoose": "^9.1.5",
