--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "canvacord": "^6.0.4",
+    "commandkit": "^0.1.10",
     "deepl-node": "^1.24.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
