--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "mongoose": "^9.1.5",
     "ms": "^2.1.3",
+    "openai": "^6.18.0",
     "pretty-ms": "^9.3.0"
   }
 }
